[package]
name = "csc411_image"
version = "0.5.2"
edition = "2021"
license = "MIT"
authors = ["Noah Daniels <noah_daniels@uri.edu>", "Najib Ishaq <najib_ishaq@zoho.com>", "Colin O'Connor <colin_oconnor@uri.edu>"]
description = "A wrapper around the image crate, for CSC 411"
repository = "https://github.com/ndaniels/csc411_image"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "=0.24.7"
